move source into an `src` subdirectory

--- a/reference/haskell/storage-proof-ref.cabal
+++ b/reference/haskell/storage-proof-ref.cabal
@@ -45,7 +45,7 @@ Library
   Default-Language:    Haskell2010
   Default-Extensions:  CPP, BangPatterns
 
-  Hs-Source-Dirs:      .
+  Hs-Source-Dirs:      src
 
   ghc-options:         -fwarn-tabs -fno-warn-unused-matches -fno-warn-name-shadowing -fno-warn-unused-imports
 
