--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -37,10 +37,10 @@ on:
       nCells:
         description: 'Number of cells in this slot'
         default: '512'
-
-      ceremonyContribution:
-        description: 'Input into the circuit ceremony setup'
-        default: 'Let the Codex rock!'
+#
+#      ceremonyContribution:
+#        description: 'Input into the circuit ceremony setup'
+#        default: 'Let the Codex rock!'
 
 env:
   nim_version: 1.6.14
@@ -102,9 +102,10 @@ jobs:
         run: |
           wget -O ceremony.ptau -P .. ${{ env.ceremony_source }}
           NODE_OPTIONS="--max-old-space-size=8192" snarkjs groth16 setup proof_main.r1cs ../ceremony.ptau proof_main_0000.zkey
-          NODE_OPTIONS="--max-old-space-size=8192" snarkjs zkey contribute proof_main_0000.zkey proof_main_0001.zkey --name="External Contribution" -e="${{ github.event.inputs.ceremonyContribution }}"
-          rm proof_main_0000.zkey
-          mv proof_main_0001.zkey proof_main.zkey
+#          NODE_OPTIONS="--max-old-space-size=8192" snarkjs zkey contribute proof_main_0000.zkey proof_main_0001.zkey --name="External Contribution" -e="${{ github.event.inputs.ceremonyContribution }}"
+#          rm proof_main_0000.zkey
+          mv proof_main_0000.zkey proof_main.zkey
+#          mv proof_main_0001.zkey proof_main.zkey
           snarkjs zkey export verificationkey proof_main.zkey proof_main_verification_key.json
           snarkjs zkey export solidityverifier proof_main.zkey verifier.sol
           cd ..
