--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -88,7 +88,7 @@ jobs:
       - name: Build CLI Proof Generator
         run: |
           cd reference/nim/proof_input/
-          nimble build -d:release cli
+          nimble -y build -d:release cli
           cd ../../../
 
       - name: Compile the circuit
