--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -80,7 +80,7 @@ jobs:
 
       - name: Setup CLI arguments
         run: |
-          ENTROPY="${{ github.run_id }}-${{ github.run_attempt }}"
+          ENTROPY="${{ github.run_id }}"
           echo "Entropy: $ENTROPY"
           echo "CLI_ARGS=--depth=${{ github.event.inputs.maxDepth }} --maxslots=${{ github.event.inputs.maxSlots }} --cellsize=${{ github.event.inputs.cellSize }} --blocksize=${{ github.event.inputs.blockSize }} --nsamples=${{ github.event.inputs.nSamples }} --entropy="$ENTROPY" --seed=${{ github.event.inputs.seed }} --nslots=${{ github.event.inputs.nSlots }} --slotindex=${{ github.event.inputs.slotIndex }} --ncells=${{ github.event.inputs.nCells }}" >> $GITHUB_ENV
 
