--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -52,8 +52,8 @@ jobs:
       run:
         shell: bash --noprofile --norc -e -o pipefail {0}
 
-#    runs-on: buildjet-16vcpu-ubuntu-2204
-    runs-on: ubuntu-latest
+    runs-on: buildjet-16vcpu-ubuntu-2204
+#    runs-on: ubuntu-latest
     timeout-minutes: 360
     steps:
       - name: Checkout sources
