--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -126,3 +126,16 @@ jobs:
           name: circuit-assets
           path: workflow/build
           retention-days: 5
+
+      - name: Upload to storage
+        run: |
+          hash=($(shasum -a 256 ${{ env.CIRCUIT_FILE }}))
+          aws s3 cp ${{ env.CIRCUIT_FILE }} s3://${{ env.AWS_S3_BUCKET }}/${hash} --endpoint-url ${AWS_S3_ENDPOINT}
+          aws s3 cp ${{ env.CIRCUIT_FILE }} s3://${{ env.AWS_S3_BUCKET }}/`basename ${{ env.CIRCUIT_FILE }}` --endpoint-url ${AWS_S3_ENDPOINT}
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+          AWS_S3_ENDPOINT: ${{ secrets.AWS_S3_ENDPOINT }}
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+          CIRCUIT_FILE: workflow/build/proof_main.zkey
