--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -93,6 +93,13 @@ jobs:
           crate: circom-witnesscalc
           git: https://github.com/iden3/circom-witnesscalc.git
 
+      - name: Setup Circom-witnesscalc/build-circuit
+        uses: baptiste0928/cargo-install@v3
+        with:
+          cache-key: 'invalid-cache-please'
+          crate: build-circuit
+          git: https://github.com/iden3/circom-witnesscalc.git
+
       - name: Setup Nim
         uses: jiro4989/setup-nim-action@v2
         with:
