--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -44,6 +44,7 @@ on:
 
 env:
   nim_version: 1.6.14
+  rust_version: 1.87.0
   nodejs_version: 18.15
   ceremony_source: https://storage.googleapis.com/zkevm/ptau/powersOfTau28_hez_final_21.ptau
   s3_bucket_path: proving-key
@@ -68,6 +69,16 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v4
 
+      - name: Install required packages
+        run: |
+          wget -qO- https://apt.llvm.org/llvm.sh | sudo bash -s -- 19
+          sudo apt-get update && sudo apt-get install -y protobuf-compiler
+
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: ${{ env.rust_version }}
+
       - name: Setup Circom
         uses: baptiste0928/cargo-install@v3
         with:
@@ -80,6 +91,13 @@ jobs:
         with:
           cache-key: 'invalid-cache-please'
           crate: circom-witnesscalc
+          git: https://github.com/iden3/circom-witnesscalc.git
+
+      - name: Setup Circom-witnesscalc/build-circuit
+        uses: baptiste0928/cargo-install@v3
+        with:
+          cache-key: 'invalid-cache-please'
+          crate: build-circuit
           git: https://github.com/iden3/circom-witnesscalc.git
 
       - name: Setup Nim
