--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -131,7 +131,7 @@ jobs:
           cd workflow/build
           ../../reference/nim/proof_input/cli $CLI_ARGS -v --circom="proof_main.circom"
           circom --r1cs --wasm --O2 -l../../circuit/lib -l../../circuit/poseidon2 -l../../circuit/codex proof_main.circom
-          build-circuit proof_main.circom proof_main.bin -l../../circuit/lib -l../../circuit/poseidon2 -l../../circuit/codex proof_main.circom
+          build-circuit proof_main.circom proof_main.bin -l../../circuit/lib -l../../circuit/poseidon2 -l../../circuit/codex
 
       - name: Circuit setup
         run: |
@@ -165,7 +165,6 @@ jobs:
         run: |
           # Archive
           mkdir archive
-          ls -alR
           mv ${{ env.circuit_file }} ${{ env.constraints_file }} ${{ env.wasm_file }} ${{ env.bin_file }} ${{ env.verification_key_file }} archive
           tar czvf ${{ env.archive_file }} -C archive .
           # Variables
